--- a/Mundo nuevo/spsSettings.json
+++ b/Mundo nuevo/spsSettings.json
@@ -1,10 +1,10 @@
 {
   "gameType": "SURVIVAL",
-  "difficulty": "NORMAL",
+  "difficulty": "HARD",
   "cheats": true,
   "invited": [
     "3c5ef84e-d835-4565-9dc0-878411c003c4",
-    "722a324e-832d-4da7-a0bc-c0aadba53cde",
+    "f6e83813-aeb2-4796-8771-13698a36a489",
     "22ab3c14-7617-4acc-980b-bc86e8c2b4c5"
   ],
   "shareResourcePack": false,
